2009-10-20  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Prevent crash when invoking a foldable codebook in a new record form.

2009-10-19  Milan Zamazal  <pdm@brailcom.org>

	* TODO:
	List new wx2.8 bug: Traceback window layout.
	

2009-10-16  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/util/configuration.py:
	Added configuration option database connection SSL mode setting..

2009-10-14  Milan Zamazal  <pdm@brailcom.org>

	* tools/dmp:
	tools/dmp script created.

2009-10-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Make sure the menu window stack is still present after reloading menu&rights.

2009-10-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Revert "Make inner join of a_pytis_computed_summary_rights in ev_pytis_user_menu".
	
	This reverts commit 13dfa6c6062f48a59deff5c519d6818f8a99599e.
	
	This change, intended to give some access protection when making menu changes,
	discards menu separators from the menu view.
	

2009-10-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Respect changes in Wiking Session interface.

2009-10-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Pass the current request object to user creation methods.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/form/configui.py:
	Add `arguments' argument to all `select' methods.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Add dummy `arguments' method to BindingSpec.

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix lock id in pytis_update_summary_rights.

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Amend: yes.
	Don't try to reselect SideBrowseForm row after main form row selection
	
	

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Don't try to reselect SideBrowseForm row after main form row selection.
